--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -1,5 +1,5 @@
 {{ if no_results }}
-<p style="margin-top: 60px; text-align: center; font-size: 24px;">We are currently have no properties for Sale or Lease in this neighborhood. Be sure to check back soon.</p>
+<p class="no_results">We are currently have no properties for Sale or Lease in this neighborhood. Be sure to check back soon.</p>
 {{ else }}
 {{ if first }}
 <div class="tile-container">
