--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -4,32 +4,32 @@
 		<div class="mask"></div>
 	</section>
 	<nav id="secondary-nav">
-	   <ul class="nav" role="tablist">
-      <li><a class="scroll" href="#individuals" >Individuals &amp; Families</a></li>
-      <li><a class="scroll" href="#trust">Trust &amp; Estates</a></li>
-      <li><a class="scroll" href="#institutions">Institutions</a></li>
-      <li><a class="scroll" href="#buyers">Buyers</a></li>
-    </ul>
-    
+		<ul class="nav" role="tablist">
+			<li><a class="scroll" href="#individuals" >Individuals &amp; Families</a></li>
+			<li><a class="scroll" href="#trust">Trust &amp; Estates</a></li>
+			<li><a class="scroll" href="#institutions">Institutions</a></li>
+			<li><a class="scroll" href="#buyers">Buyers</a></li>
+		</ul>
+
 	</nav>
 	<section class="content services">
-	<a id="individuals" class="secondary-nav-link"></a>
+		<a id="individuals" class="secondary-nav-link"></a>
 		<div class="container">
-		<main>
-			<h2>Individuals &amp; Familes</h2>
-			<h3>{{ individual_subheader }}</h3>
-			{{ individual_description }}
-			<div class="service-list">
-				<h4>Specific Service Delivered:</h4>
-				<ul>
-				{{ individual_services }}
-					<li>{{ value }}</li>
-				{{ /individual_services }}
-				</ul>
-			</div>
-		</main>
-		<aside>
-			{{ individual_quote }}
+			<main>
+				<h2>Individuals &amp; Familes</h2>
+				<h3>{{ individual_subheader }}</h3>
+				{{ individual_description }}
+				<div class="service-list">
+					<h4>Specific Service Delivered:</h4>
+					<ul>
+						{{ individual_services }}
+						<li>{{ value }}</li>
+						{{ /individual_services }}
+					</ul>
+				</div>
+			</main>
+			<aside>
+				{{ individual_quote }}
 				<div class="quote">
 					<span class="quote-symbol left">{{ theme:partial src="svg/quote_up" }}</span>{{ main }}<span class="quote-symbol right">{{ theme:partial src="svg/quote_down" }}</span>
 				</div>
@@ -39,28 +39,28 @@
 				<div class="description">
 					{{ description }}
 				</div>
-			{{ /individual_quote }}
-		</aside>
+				{{ /individual_quote }}
+			</aside>
 		</div>
 	</section>
 	<section class="content services neighborhood light-blue">
-	<a id="trust" class="secondary-nav-link"></a>
+		<a id="trust" class="secondary-nav-link"></a>
 		<div class="container">
-<main>
-			<h2>Trusts &amp; Estates</h2>
-			<h3>{{ trust_subheader }}</h3>
-			{{ trust_description }}
-			<div class="service-list">
-				<h4>Specific Service Delivered:</h4>
-				<ul>
-				{{ trust_services }}
-					<li>{{ value }}</li>
-				{{ /trust_services }}
-				</ul>
-			</div>
-		</main>
-		<aside>
-			{{ trust_quote }}
+			<main>
+				<h2>Trusts &amp; Estates</h2>
+				<h3>{{ trust_subheader }}</h3>
+				{{ trust_description }}
+				<div class="service-list">
+					<h4>Specific Service Delivered:</h4>
+					<ul>
+						{{ trust_services }}
+						<li>{{ value }}</li>
+						{{ /trust_services }}
+					</ul>
+				</div>
+			</main>
+			<aside>
+				{{ trust_quote }}
 				<div class="quote">
 					<span class="quote-symbol left">{{ theme:partial src="svg/quote_up" }}</span>{{ main }}<span class="quote-symbol right">{{ theme:partial src="svg/quote_down" }}</span>
 				</div>
@@ -70,21 +70,35 @@
 				<div class="description">
 					{{ description }}
 				</div>
-			{{ /trust_quote }}
-		</aside>
+				{{ /trust_quote }}
+			</aside>
 			
 		</div>
 	</section class="content services">
 
-	<section class="content">
-	<a id="institutions" class="secondary-nav-link"></a>
+	<section class="content services">
+		<a id="institutions" class="secondary-nav-link"></a>
 		<div class="container">
-			<h3>Institutions</h3>
+			<main>
+				<h2>Institutions</h2>
+			</main>
+			<aside>
+				<div class="quote">
+					foo
+				</div>
+			</aside>
 		</div>
 	</section>
 	<section class="content services dark-seafoam-bg">
-	<a id="buyers" class="secondary-nav-link"></a>
+		<a id="buyers" class="secondary-nav-link"></a>
 		<div class="container">
-			<h3>Buyers</h3>
+			<main>
+				<h2>Buyers</h2>
+			</main>
+			<aside>
+				<div class="quote">
+					foo
+				</div>
+			</aside>
 		</div>
 	</section>
