--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -115,13 +115,15 @@ section.services {
 		justify-content: space-between;
 	}
 	main {
-		@include span(9 of 12);
-		* {
-			@include span(8 of 12);
-		}
+		@include span(6 of 12);
 	}
 	aside {
-		@include span(last 3 of 12);
+		@include pre(1);
+		@include span(last 5 of 12);
+		.circle {
+			padding-top: gutter(.1);
+			position: relative;
+		}
 	}
 }
 
