--- a/statamic/_themes/main/templates/agent_individual.html
+++ b/statamic/_themes/main/templates/agent_individual.html
@@ -1,7 +1,7 @@
 <section class="leading background-gray agent-individual">
 	<div class="container">
 
-		<aside>					
+		<aside class="sticky">					
 			<img class="circle" src="{{ transform src="{{ image }}" width="300" }}" class="img-circle" />
 			<h2>Contact {{ title }}</h2>
 			<ul>
