--- a/src/scss/modules/_quotes.scss
+++ b/src/scss/modules/_quotes.scss
@@ -2,8 +2,13 @@
 	text-align: center;
 }
 .person, .description {
-	font-size: 12px;
-	line-height: 18px;
+	font-size: 14px;
+	line-height: 20px;
+	text-transform: uppercase;
+}
+
+.description {
+	font-weight: 100;
 }
 
 .quote {
@@ -14,6 +19,13 @@
   flex-flow: column nowrap;
   justify-content: center;
   width: 65%;
+  z-index: 100;
+  img {
+  	display: inline-block;
+  	position: relative;
+  	width: auto;
+  	text-align: center;
+  }
 }
 
 .quote-content {
@@ -21,6 +33,7 @@
 	font-family: $header-font-family;
 	font-size: 18px;
 	line-height: 30px;
+	z-index: 100;
 	.quote-symbol {
 		position: absolute;
 		&.left {
@@ -36,6 +49,7 @@
 	font-weight: 700;
 	text-transform: uppercase;
 	margin-top: 30px;
+	display: inline-block;
 }
 
 .service-quote {
