--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -6212,8 +6212,12 @@ section.services h3 {
   text-align: center; }
 
 .person, .description {
-  font-size: 12px;
-  line-height: 18px; }
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase; }
+
+.description {
+  font-weight: 100; }
 
 .quote {
   margin: auto;
@@ -6231,13 +6235,21 @@ section.services h3 {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  width: 65%; }
+  width: 65%;
+  z-index: 100; }
+
+.quote img {
+  display: inline-block;
+  position: relative;
+  width: auto;
+  text-align: center; }
 
 .quote-content {
   display: inline-block;
   font-family: "Copernicus-Semibold";
   font-size: 18px;
-  line-height: 30px; }
+  line-height: 30px;
+  z-index: 100; }
 
 .quote-content .quote-symbol {
   position: absolute; }
@@ -6251,7 +6263,8 @@ section.services h3 {
 .person {
   font-weight: 700;
   text-transform: uppercase;
-  margin-top: 30px; }
+  margin-top: 30px;
+  display: inline-block; }
 
 .service-quote {
   position: relative; }
