--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -1,7 +1,7 @@
 <section class="leading property-page background-gray">
 	<div class="container">
 
-		<aside>
+		<aside class="sticky">
 			<div class="agent property-agents">
 				<div class="dotted"></div>
 				{{ relate:agents }}
