--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -75,6 +75,14 @@ p {
         @include span (8 of 12);
         text-align: center;
     }
+    &.light {
+        font-size: 13px;
+        line-height: 18px;
+        font-family: $base-font-family;
+        font-weight: 100;
+        color: lighten($dark-gray,40%);
+        text-align: center;
+    }
 }
 
 .container.large-body {
