--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -1,27 +1,27 @@
 	<section class="hero small leading" style="background-image: url( {{ path src="{{ hero_image }}" }} );">
-	<a id="description" class="secondary-nav-link"></a>
+		<a id="description" class="secondary-nav-link"></a>
 		<h1>{{ title }}</h1>
 		<!-- <h3>{{ sub_headline }}</h3> -->
 		<div class="mask"></div>
 	</section>
 	<nav id="secondary-nav">
-	   <ul class="nav" role="tablist">
-      <li class="active"><a class="scroll" href="#description" >Description</a></li>
-      <li><a class="scroll" href="#location">Location</a></li>
-      <li><a class="scroll" href="#numbers">By the Numbers</a></li>
-      <li><a class="scroll" href="#other_properties">Properties</a></li>
-    </ul>
-    
+		<ul class="nav" role="tablist">
+			<li class="active"><a class="scroll" href="#description" >Description</a></li>
+			<li><a class="scroll" href="#location">Location</a></li>
+			<li><a class="scroll" href="#numbers">By the Numbers</a></li>
+			<li><a class="scroll" href="#other_properties">Properties</a></li>
+		</ul>
+
 	</nav>
 	<section class="content">
-	
+
 		<div class="container large-body">
 			<h3>description</h3>
 			{{ description }}
 		</div>
 	</section>
 	<section class="content neighborhood background-gray">
-	<a id="location" class="secondary-nav-link"></a>
+		<a id="location" class="secondary-nav-link"></a>
 		<div class="container">
 			<h3>location</h3>
 			<div id="map"></div>
@@ -29,53 +29,54 @@
 	</section class="content">
 
 	<section class="content">
-	<a id="numbers" class="secondary-nav-link"></a>
+		<a id="numbers" class="secondary-nav-link"></a>
 		<div class="container">
 			<h3>by the numbers</h3>
-<div class="grid numbers">
-	<div class="grid-6 full">
-		<h1>{{ left }}%</h1>
-		<h3>RISE IN PROPERTY PRICES IN THE LAST FIVE YEARS</h3>
-		{{ theme:partial src="svg/graph" }}
-	</div>
-	<div class="grid-6">
-
-		<div class="half">
-
-			<div class="descriptor">
-				<span class="price">${{ right_top|format_number }}*</span>
-			</div>
-			{{ theme:partial src="svg/diamond" }}
-
-		</div>
-			<span class="price-descriptor">AVERAGE PRICE PER SQ/ FT</span>
-		<div class="divider"></div>
-		{{ right_bottom }}
-			{{ if price_tag }}
-				<div class="half">
-					<div class="descriptor">
-						<span class="price tilted">${{ price_tag }}*</span>
-					</div>
-				{{ theme:partial src="svg/price_tag" }}
+			<div class="grid numbers">
+				<div class="grid-6 full">
+					<h1>{{ left }}%</h1>
+					<h3>RISE IN PROPERTY PRICES IN THE LAST FIVE YEARS</h3>
+					{{ theme:partial src="svg/graph" }}
 				</div>
-				<span class="price-descriptor">AVERAGE SALE PRICE</span>
-			{{ elseif simple_graphic }}
-			<div class="half">
-				<h1 class="large">
-					{{ simple_graphic }}
-				</h1>
+				<div class="grid-6">
+
+					<div class="half">
+
+						<div class="descriptor">
+							<span class="price">${{ right_top|format_number }}*</span>
+						</div>
+						{{ theme:partial src="svg/diamond" }}
+
+					</div>
+					<span class="price-descriptor">AVERAGE PRICE PER SQ/ FT</span>
+					<div class="divider"></div>
+					{{ right_bottom }}
+					{{ if price_tag }}
+					<div class="half">
+						<div class="descriptor">
+							<span class="price tilted">${{ price_tag }}*</span>
+						</div>
+						{{ theme:partial src="svg/price_tag" }}
+					</div>
+					<span class="price-descriptor">AVERAGE SALE PRICE</span>
+					{{ elseif simple_graphic }}
+					<div class="half">
+						<h1 class="large">
+							{{ simple_graphic }}
+						</h1>
+					</div>
+					<span class="price-descriptor">TOWNHOUSES SOLD IN THE LAST YEAR</span>
+					{{ endif }}
+					{{ /right_bottom }}
+
+				</div>
+
 			</div>
-				<span class="price-descriptor">TOWNHOUSES SOLD IN THE LAST YEAR</span>
-			{{ endif }}
-		{{ /right_bottom }}
-
-	</div>
-</div>
-
+			<p class="light">* These numbers are averages and fluctuate frequently. Contact us for the most up-to-date data on NYC neighborhoods and blocks.</p>
 		</div>
 	</section>
 	<section class="content dark-seafoam-bg">
-	<a id="other_properties" class="secondary-nav-link"></a>
+		<a id="other_properties" class="secondary-nav-link"></a>
 		<div class="container">
 			<h3>CURRENT PROPERTIES IN THIS NEIGHBORHOOD</h3>
 			{{ entries:listing folder="properties/sale|properties/lease" conditions="property_location:{title}"}}
@@ -87,7 +88,7 @@
 		<div class="container">
 			<h3>Other Neighborhoods</h3>
 			<ul class="grid">
-			{{ entries:listing folder="neighborhoods/individual_neighborhoods" conditions="url:!{url}" }}	
+				{{ entries:listing folder="neighborhoods/individual_neighborhoods" conditions="url:!{url}" }}	
 				{{ theme:partial src="neighborhood_tile" use_context="true" }}
 				{{ /entries:listing }}
 			</ul>
