faq and company pages

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -75,6 +75,11 @@ img {
 .dark-seafoam-bg {
   background-color: $dark-seafoam-bg;
 }
+
+.darkest-seafoam-bg {
+  background-color: $darkest-seafoam-bg;
+}
+
 .similar-properties-gray {
   background-color: $similar-properties-gray;
 }
