--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -34,6 +34,8 @@
 @import 'components/_green_specs.scss';
 @import 'components/_slick_overides.scss';
 @import 'components/_by_the_numbers.scss';
+@import 'components/_faq_aside.scss';
+@import 'components/_company.scss';
 
 // modules
 @import 'modules/_hero.scss';
@@ -48,6 +50,7 @@
 @import 'modules/_agents_tile.scss';
 @import 'modules/_quotes.scss';
 @import 'modules/_service_lists.scss';
+@import 'modules/_faq_list.scss';
 
 // pages
 // @import 'pages/_landing.scss';
