--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -4,12 +4,12 @@
 		<!-- <h3>{{ sub_headline }}</h3> -->
 		<div class="mask"></div>
 	</section>
-	<nav id="secondary-nav">
+	<nav id="scroll-spy-nav" class="secondary-nav">
 		<ul class="nav" role="tablist">
-			<li class="active"><a class="scroll" href="#description" >Description</a></li>
-			<li><a class="scroll" href="#location">Location</a></li>
-			<li><a class="scroll" href="#numbers">By the Numbers</a></li>
-			<li><a class="scroll" href="#other_properties">Properties</a></li>
+			<li class="active"><a class="scroll smooth" href="#description" >Description</a></li>
+			<li><a class="scroll smooth" href="#location">Location</a></li>
+			<li><a class="scroll smooth" href="#numbers">By the Numbers</a></li>
+			<li><a class="scroll smooth" href="#other_properties">Properties</a></li>
 		</ul>
 
 	</nav>
