--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -28,6 +28,11 @@ header {
 	}
 }
 
+.block {
+	width: 100%;
+	height: 78px;
+}
+
 nav {
 	width: 100%;
 	height: auto;
@@ -75,7 +80,7 @@ nav {
 			outline: none;
 		}
 	}
-	&#secondary-nav {
+	&.secondary-nav {
 		z-index: 100;
 		&.stuck {
 			position: fixed;
