--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -2,12 +2,12 @@
 		<h1>{{ title }}</h1>
 		<div class="mask"></div>
 	</section>
-	<nav id="secondary-nav">
+	<nav id="scroll-spy-nav" class="secondary-nav">
 		<ul class="nav" role="tablist">
-			<li><a class="scroll" href="#individuals" >Individuals &amp; Families</a></li>
-			<li><a class="scroll" href="#trust">Trust &amp; Estates</a></li>
-			<li><a class="scroll" href="#institutions">Institutions</a></li>
-			<li><a class="scroll" href="#buyers">Buyers</a></li>
+			<li><a class="scroll smooth" href="#individuals" >Individuals &amp; Families</a></li>
+			<li><a class="scroll smooth" href="#trust">Trust &amp; Estates</a></li>
+			<li><a class="scroll smooth" href="#institutions">Institutions</a></li>
+			<li><a class="scroll smooth" href="#buyers">Buyers</a></li>
 		</ul>
 	</nav>
 	<section class="content services">
