--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -1,4 +1,4 @@
-<section class="hero leading dark">
+<section class="hero small leading dark">
 	<h1>Truth Builds Trust</h1>
 	<h3>At least that's how we see it</h3>
 </section>
