fixed scrollspy target

--- a/statamic/_themes/main/layouts/default.html
+++ b/statamic/_themes/main/layouts/default.html
@@ -11,7 +11,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCa3ywQ6GzCRIlFJsqT0_a1fBhaP7MoJpM">
     </script>
 </head>
-<body data-spy="scroll" data-target="#secondary-nav">
+<body data-spy="scroll" data-target="#scroll-spy-nav">
 
     <div class="page-wrap">
       {{ theme:partial src="nav" }}
